--- a/src/main/webapp/resources/html_MISC/TR Box Management - Box Receive.html
+++ b/src/main/webapp/resources/html_MISC/TR Box Management - Box Receive.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="../css/master.css" />
 <link rel="stylesheet" type="text/css" href="../css/common.css" />
 <link rel="stylesheet" type="text/css" href="../css/multiple-select.css" />
+<link rel="stylesheet" type="text/css" href="../css/jquery-ui-custom.css" />
 <script type="text/javascript" src="../js/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="../js/jquery-ui.min.js"></script>
 <script type="text/javascript" src="../js/jquery.ui.core.min.js"></script>
@@ -153,7 +154,7 @@
 
 <aside class="title_line"><!-- title_line start -->
 <p class="fav"><a href="#" class="click_add_on">My menu</a></p>
-<h2>TR Box Management</h2>
+<h2>title</h2>
 <ul class="right_btns">
 	<li><p class="btn_blue"><a href="#"><span class="search"></span>Search</a></p></li>
 	<li><p class="btn_blue"><a href="#"><span class="clear"></span>Clear</a></p></li>
@@ -167,54 +168,33 @@
 <table class="type1"><!-- table start -->
 <caption>table</caption>
 <colgroup>
-	<col style="width:150px" />
+	<col style="width:140px" />
 	<col style="width:*" />
-	<col style="width:150px" />
+	<col style="width:140px" />
 	<col style="width:*" />
-	<col style="width:150px" />
+	<col style="width:140px" />
 	<col style="width:*" />
 </colgroup>
 <tbody>
 <tr>
-	<th scope="row">Box Number</th>
-	<td>
-	<input type="text" title="" placeholder="Box Number" class="w100p" />
-	</td>
+	<th scope="row">Transit No</th>
+	<td><input type="text" title="" placeholder="Transit No" class="w100p" /></td>
+	<th scope="row">Box No</th>
+	<td><input type="text" title="" placeholder="Box No" class="w100p" /></td>
 	<th scope="row">Create Date</th>
-	<td>
-
-	<div class="date_set w100p"><!-- date_set start -->
-	<p><input type="text" title="Create start Date" placeholder="DD/MM/YYYY" class="j_date" /></p>
-	<span>To</span>
-	<p><input type="text" title="Create end Date" placeholder="DD/MM/YYYY" class="j_date" /></p>
-	</div><!-- date_set end -->
-
-	</td>
-	<th scope="row">Creator</th>
-	<td>
-	<input type="text" title="" placeholder="Creator(User Name)" class="w100p" />
-	</td>
+	<td><input type="text" title="Create start Date" placeholder="DD/MM/YYYY" class="j_date w100p" /></td>
 </tr>
 <tr>
-	<th scope="row">Box Status</th>
+	<th scope="row">Create By</th>
+	<td><input type="text" title="" placeholder="Create By" class="w100p" /></td>
+	<th scope="row">Status</th>
 	<td>
-	<select class="multy_select w100p" multiple="multiple">
-		<option value="1">11</option>
-		<option value="2">22</option>
-		<option value="3">33</option>
-	</select>
-
+		<select class="w100p">
+			<option value="">Active/Pending</option>
+			<option value="">Closed</option>
+		</select>
 	</td>
-	<th scope="row">Branch</th>
-	<td>
-	<select class="w100p">
-		<option value="">11</option>
-		<option value="">22</option>
-		<option value="">33</option>
-	</select>
-	</td>
-	<th scope="row"></th>
-	<td></td>
+	<td colspan="2"></td>
 </tr>
 </tbody>
 </table><!-- table end -->
