--- a/src/main/webapp/resources/html_MISC/TR Box Management - Transit Receive Result Update.html
+++ b/src/main/webapp/resources/html_MISC/TR Box Management - Transit Receive Result Update.html
@@ -153,71 +153,159 @@
 
 <aside class="title_line"><!-- title_line start -->
 <p class="fav"><a href="#" class="click_add_on">My menu</a></p>
-<h2>TR Box Management</h2>
-<ul class="right_btns">
-	<li><p class="btn_blue"><a href="#"><span class="search"></span>Search</a></p></li>
-	<li><p class="btn_blue"><a href="#"><span class="clear"></span>Clear</a></p></li>
-</ul>
+<h2>Transit Receive Result Update</h2>
 </aside><!-- title_line end -->
 
 
 <section class="search_table"><!-- search_table start -->
+
+<aside class="title_line"><!-- title_line start -->
+<h3>Transit Information</h3>
+</aside><!-- title_line end -->
+
 <form action="#" method="post">
+
+<table class="type1"><!-- table start -->
+<caption>table</caption>
+<colgroup>
+	<col style="width:160px" />
+	<col style="width:*" />
+	<col style="width:150px" />
+	<col style="width:*" />
+	<col style="width:130px" />
+	<col style="width:*" />
+</colgroup>
+<tbody>
+<tr>
+	<th scope="row">Transit No</th>
+	<td>
+	<span>1111</span>
+	</td>
+	<th scope="row">Transit Date</th>
+	<td>
+	</td>
+	<th scope="row">Transit Status </th>
+	<td>
+	</td>
+</tr>
+<tr>
+	<th scope="row">Transit From</th>
+	<td>
+	<span>1111</span>
+	</td>
+	<th scope="row">Transit To</th>
+	<td>
+	</td>
+	<th scope="row">Close Date</th>
+	<td>
+	</td>
+</tr>
+<tr>
+	<th scope="row">Total Book Transit</th>
+	<td>
+	<span>1111</span>
+	</td>
+	<th scope="row">Courier</th>
+	<td>
+	</td>
+	<th scope="row">Creator</th>
+	<td>
+	</td>
+</tr>
+<tr>
+	<th scope="row">Total Pending</th>
+	<td>
+	<span>1111</span>
+	</td>
+	<th scope="row">Total Received</th>
+	<td>
+	</td>
+	<th scope="row">Total Not Received</th>
+	<td>
+	</td>
+</tr>
+</tbody>
+</table><!-- table end -->
+
+<aside class="title_line"><!-- title_line start -->
+<h3>Transit Result</h3>
+</aside><!-- title_line end -->
 
 <table class="type1"><!-- table start -->
 <caption>table</caption>
 <colgroup>
 	<col style="width:150px" />
 	<col style="width:*" />
-	<col style="width:150px" />
-	<col style="width:*" />
-	<col style="width:150px" />
-	<col style="width:*" />
 </colgroup>
 <tbody>
 <tr>
-	<th scope="row">Box Number</th>
+	<th scope="row">Transit Status</th>
 	<td>
-	<input type="text" title="" placeholder="Box Number" class="w100p" />
-	</td>
-	<th scope="row">Create Date</th>
-	<td>
-
-	<div class="date_set w100p"><!-- date_set start -->
-	<p><input type="text" title="Create start Date" placeholder="DD/MM/YYYY" class="j_date" /></p>
-	<span>To</span>
-	<p><input type="text" title="Create end Date" placeholder="DD/MM/YYYY" class="j_date" /></p>
-	</div><!-- date_set end -->
-
-	</td>
-	<th scope="row">Creator</th>
-	<td>
-	<input type="text" title="" placeholder="Creator(User Name)" class="w100p" />
-	</td>
-</tr>
-<tr>
-	<th scope="row">Box Status</th>
-	<td>
-	<select class="multy_select w100p" multiple="multiple">
-		<option value="1">11</option>
-		<option value="2">22</option>
-		<option value="3">33</option>
-	</select>
-
-	</td>
-	<th scope="row">Branch</th>
-	<td>
-	<select class="w100p">
+	<select>
 		<option value="">11</option>
 		<option value="">22</option>
 		<option value="">33</option>
 	</select>
 	</td>
-	<th scope="row"></th>
-	<td></td>
 </tr>
 </tbody>
 </table><!-- table end -->
+
+</form>
+</section><!-- search_table end -->
+
+<section class="search_result"><!-- search_result start -->
+
+<div class="divine_auto type2 mt0"><!-- divine_auto start -->
+
+<div style="width:50%;">
+
+<div class="border_box" style="height:100px;"><!-- border_box start -->
+
+<aside class="title_line"><!-- title_line start -->
+<h4 class="pt0">Book In Transit</h4>
+</aside><!-- title_line end -->
+
+<article class="grid_wrap"><!-- grid_wrap start -->
+그리드 영역
+</article><!-- grid_wrap end -->
+
+</div><!-- border_box end -->
+
+</div>
+
+<div style="width:50%;">
+
+<div class="border_box" style="height:100px;"><!-- border_box start -->
+
+<aside class="title_line"><!-- title_line start -->
+<h4 class="pt0">Action List</h4>
+</aside><!-- title_line end -->
+
+<article class="grid_wrap"><!-- grid_wrap start -->
+그리드 영역
+</article><!-- grid_wrap end -->
+
+<ul class="btns">
+	<li><a href="#"><img src="../images/common/btn_left.gif" alt="left" /></a></li>
+	<li><a href="#"><img src="../images/common/btn_right.gif" alt="right" /></a></li>
+</ul>
+
+</div><!-- border_box end -->
+
+</div>
+
+</div><!-- divine_auto end -->
+
+<ul class="left_btns mt10">
+	<li><p class="btn_blue2"><a href="#">Filter List</a></p></li>
+	<li><p class="btn_blue2"><a href="#">Show All</a></p></li>
+</ul>
+
+<ul class="center_btns mt20">
+	<li><p class="btn_blue2 big"><a href="#">SAVE</a></p></li>
+</ul>
+</section><!-- search_result end -->
 
 <aside class="link_btns_wrap"><!-- link_btns_wrap start -->
 <p class="show_btn"><a href="#"><img src="../images/common/btn_link.gif" alt="link show" /></a></p>
@@ -248,25 +336,6 @@
 	</dd>
 </dl>
 </aside><!-- link_btns_wrap end -->
-
-</form>
-</section><!-- search_table end -->
-
-<section class="search_result"><!-- search_result start -->
-
-<ul class="right_btns">
-	<li><p class="btn_grid"><a href="#">EXCEL UP</a></p></li>
-	<li><p class="btn_grid"><a href="#">EXCEL DW</a></p></li>
-	<li><p class="btn_grid"><a href="#">DEL</a></p></li>
-	<li><p class="btn_grid"><a href="#">INS</a></p></li>
-	<li><p class="btn_grid"><a href="#">ADD</a></p></li>
-</ul>
-
-<article class="grid_wrap"><!-- grid_wrap start -->
-그리드 영역
-</article><!-- grid_wrap end -->
-
-</section><!-- search_result end -->
 
 </section><!-- content end -->
 
