--- a/src/main/webapp/resources/html_Sales/TR Book Management - Return.html
+++ b/src/main/webapp/resources/html_Sales/TR Book Management - Return.html
@@ -153,71 +153,134 @@
 
 <aside class="title_line"><!-- title_line start -->
 <p class="fav"><a href="#" class="click_add_on">My menu</a></p>
-<h2>TR Box Management</h2>
+<h2>TR Book Management - Return</h2>
 <ul class="right_btns">
 	<li><p class="btn_blue"><a href="#"><span class="search"></span>Search</a></p></li>
 	<li><p class="btn_blue"><a href="#"><span class="clear"></span>Clear</a></p></li>
 </ul>
 </aside><!-- title_line end -->
 
-
-<section class="search_table"><!-- search_table start -->
-<form action="#" method="post">
+<aside class="title_line"><!-- title_line start -->
+<h3>TR Book Details</h3>
+</aside><!-- title_line end -->
 
 <table class="type1"><!-- table start -->
 <caption>table</caption>
 <colgroup>
-	<col style="width:150px" />
+	<col style="width:170px" />
 	<col style="width:*" />
-	<col style="width:150px" />
-	<col style="width:*" />
-	<col style="width:150px" />
+	<col style="width:185px" />
 	<col style="width:*" />
 </colgroup>
 <tbody>
 <tr>
-	<th scope="row">Box Number</th>
+	<th scope="row">TR Book No</th>
 	<td>
-	<input type="text" title="" placeholder="Box Number" class="w100p" />
+	<span>1111</span>
 	</td>
-	<th scope="row">Create Date</th>
+	<th scope="row">Prefix No</th>
 	<td>
-
-	<div class="date_set w100p"><!-- date_set start -->
-	<p><input type="text" title="Create start Date" placeholder="DD/MM/YYYY" class="j_date" /></p>
-	<span>To</span>
-	<p><input type="text" title="Create end Date" placeholder="DD/MM/YYYY" class="j_date" /></p>
-	</div><!-- date_set end -->
-
-	</td>
-	<th scope="row">Creator</th>
-	<td>
-	<input type="text" title="" placeholder="Creator(User Name)" class="w100p" />
 	</td>
 </tr>
 <tr>
-	<th scope="row">Box Status</th>
+	<th scope="row">TR No</th>
 	<td>
-	<select class="multy_select w100p" multiple="multiple">
-		<option value="1">11</option>
-		<option value="2">22</option>
-		<option value="3">33</option>
-	</select>
-
+	<span>1111</span>
 	</td>
-	<th scope="row">Branch</th>
+	<th scope="row">TR Holder</th>
 	<td>
-	<select class="w100p">
-		<option value="">11</option>
-		<option value="">22</option>
-		<option value="">33</option>
-	</select>
 	</td>
-	<th scope="row"></th>
-	<td></td>
+</tr>
+<tr>
+	<th scope="row">Status</th>
+	<td>
+	<span>1111</span>
+	</td>
+	<th scope="row">Total Page(s)</th>
+	<td>
+	</td>
+</tr>
+<tr>
+	<th scope="row">Return To</th>
+	<td colspan="3">
+	<span>1111</span>
+	</td>
+</tr>
+<tr>
+	<th scope="row">Total Match</th>
+	<td>
+	<span>1111</span>
+	</td>
+	<th scope="row">Total Unmatch</th>
+	<td>
+	</td>
+</tr>
+<tr>
+	<th scope="row">Total Cancel</th>
+	<td>
+	<span>1111</span>
+	</td>
+	<th scope="row">Total Lost</th>
+	<td>
+	</td>
+</tr>
+<tr>
+	<th scope="row">Total Finance Used</th>
+	<td>
+	<span>1111</span>
+	</td>
+	<th scope="row">Total Marketing Used</th>
+	<td>
+	</td>
 </tr>
 </tbody>
 </table><!-- table end -->
+
+<aside class="title_line"><!-- title_line start -->
+<h3>Holder Information</h3>
+</aside><!-- title_line end -->
+
+<table class="type1"><!-- table start -->
+<caption>table</caption>
+<colgroup>
+	<col style="width:170px" />
+	<col style="width:*" />
+	<col style="width:185px" />
+	<col style="width:*" />
+</colgroup>
+<tbody>
+<tr>
+	<th scope="row">Member Code</th>
+	<td>
+	<span>1111</span>
+	</td>
+	<th scope="row">Member Type</th>
+	<td>
+	</td>
+</tr>
+<tr>
+	<th scope="row">Member Name</th>
+	<td>
+	<span>1111</span>
+	</td>
+	<th scope="row">NRIC</th>
+	<td>
+	</td>
+</tr>
+</tbody>
+</table><!-- table end -->
+
+<aside class="title_line"><!-- title_line start -->
+<h3>Unmatch Receipt</h3>
+</aside><!-- title_line end -->
+
+<article class="grid_wrap"><!-- grid_wrap start -->
+그리드 영역
+</article><!-- grid_wrap end -->
+
+<ul class="center_btns">
+	<li><p class="btn_blue2 big"><a href="#">SAVE</a></p></li>
+</ul>
 
 <aside class="link_btns_wrap"><!-- link_btns_wrap start -->
 <p class="show_btn"><a href="#"><img src="../images/common/btn_link.gif" alt="link show" /></a></p>
@@ -248,25 +311,6 @@
 	</dd>
 </dl>
 </aside><!-- link_btns_wrap end -->
-
-</form>
-</section><!-- search_table end -->
-
-<section class="search_result"><!-- search_result start -->
-
-<ul class="right_btns">
-	<li><p class="btn_grid"><a href="#">EXCEL UP</a></p></li>
-	<li><p class="btn_grid"><a href="#">EXCEL DW</a></p></li>
-	<li><p class="btn_grid"><a href="#">DEL</a></p></li>
-	<li><p class="btn_grid"><a href="#">INS</a></p></li>
-	<li><p class="btn_grid"><a href="#">ADD</a></p></li>
-</ul>
-
-<article class="grid_wrap"><!-- grid_wrap start -->
-그리드 영역
-</article><!-- grid_wrap end -->
-
-</section><!-- search_result end -->
 
 </section><!-- content end -->
 
